--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WjtkjBGmvHapwDo5lS+RRRWsuXA69+Df8sULvX7njMM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
